--- a/valentine.html
+++ b/valentine.html
@@ -54,13 +54,6 @@
             color: red;
             white-space: pre-line; /* Ensures proper word spacing */
         }
-        #hearts {
-            position: absolute;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-        }
     </style>
 </head>
 <body>
@@ -84,7 +77,6 @@
 
             function typeEffect() {
                 if (index < text.length) {
-                    // Use innerHTML to ensure proper spacing and line breaks
                     let currentChar = text[index];
                     document.getElementById("popup-text").innerHTML += currentChar;
                     index++;
@@ -98,14 +90,17 @@
             document.getElementById("popup").style.display = "none";
         }
 
-        async function moveNo() {
-            let response = await fetch("/move_no");
-            let data = await response.json();
-            document.getElementById("no-btn").style.left = data.x + "px";
-            document.getElementById("no-btn").style.top = data.y + "px";
+        function moveNo() {
+            let noBtn = document.getElementById("no-btn");
+            let maxX = window.innerWidth - noBtn.clientWidth - 10;
+            let maxY = window.innerHeight - noBtn.clientHeight - 10;
+            let newX = Math.random() * maxX;
+            let newY = Math.random() * maxY;
+
+            noBtn.style.left = `${newX}px`;
+            noBtn.style.top = `${newY}px`;
         }
     </script>
 
 </body>
 </html>
-
