--- a/index.html
+++ b/index.html
@@ -7,108 +7,116 @@
     <style>
         body {
             text-align: center;
-            background-color: pink;
-            font-family: Arial, sans-serif;
-            overflow: hidden; /* Prevents page scrolling */
+            background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
+            font-family: 'Arial', sans-serif;
+            overflow: hidden;
         }
         #question {
-            font-size: 24px;
+            font-size: 36px;
             font-weight: bold;
-            margin-top: 50px;
+            color: #fff;
+            text-shadow: 2px 2px 4px #000000;
+            margin-top: 30px;
         }
         .btn {
-            font-size: 18px;
+            font-size: 20px;
             padding: 12px 24px;
             border: none;
             cursor: pointer;
-            position: absolute;
-            transition: all 0.2s ease-in-out;
+            border-radius: 25px;
+            transition: all 0.3s ease;
         }
         #yes-btn {
-            background-color: lightgreen;
-            left: 50%;
-            transform: translateX(-50%);
-            top: 200px;
+            background-color: #88e1f2;
+            left: 45%;
+            top: 350px;
+            position: absolute;
         }
         #no-btn {
-            background-color: lightcoral;
+            background-color: #ff6f61;
             left: 55%;
-            top: 200px;
+            top: 350px;
+            position: absolute;
         }
         #popup {
             display: none;
-            background: white;
+            background: #fff;
             padding: 20px;
             width: 350px;
+            border-radius: 20px;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             text-align: center;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);
         }
         #popup p {
-            font-size: 16px;
-            font-weight: bold;
-            color: red;
-            white-space: pre-line; /* Ensures proper word spacing */
+            color: #ff6f61;
+            font-size: 18px;
+        }
+        #popup img {
+            width: 100%;
+            border-radius: 15px;
+            margin-top: 10px;
+        }
+        #popup .btn-popup {
+            background-color: #88e1f2;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
+            padding: 20px;
+        }
+        .gallery img {
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 15px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s;
+        }
+        .gallery img:hover {
+            transform: scale(1.05);
         }
     </style>
 </head>
 <body>
-
     <div id="question">Will you be my Valentine? ❤️</div>
-
     <button class="btn" id="yes-btn" onclick="showPopup()">Yes</button>
     <button class="btn" id="no-btn" onmouseover="moveNo()">No</button>
-
-    <div id="popup">
-        <p id="popup-text"></p>
-        <button onclick="closePopup()" style="background: lightgreen; padding: 10px; border: none;">Feeling Lucky! 🎉</button>
+    <div class="gallery">
+        <img src="valentine1.jpg" alt="Memory 1">
+        <img src="valentine2.jpg" alt="Memory 2">
+        <img src="valentine3.jpg" alt="Memory 3">
+        <img src="valentine4.jpg" alt="Memory 4">
+        <img src="valentine5.jpg" alt="Memory 5">
     </div>
-
+    <div id="popup">
+        <p>I knew you wouldn’t resist my charm! 💖 Now tell me, how lucky do you feel? 😏</p>
+        <!-- <img src="https://via.placeholder.com/300" alt="Special Memory"> -->
+        <button class="btn-popup" onclick="closePopup()">ALOTTTTTTTT LESSSSGGOOOOOO 😍😍</button>
+    </div>
     <script>
         function showPopup() {
-            let text = "I knew you wouldn’t resist my charm! 💖\n\nNow tell me, how lucky do you feel? 😏";
-            let index = 0;
-            document.getElementById("popup-text").innerHTML = ""; // Reset text on each Yes click
             document.getElementById("popup").style.display = "block";
-
-            function typeEffect() {
-                if (index < text.length) {
-                    let currentChar = text[index];
-                    document.getElementById("popup-text").innerHTML += currentChar;
-                    index++;
-                    setTimeout(typeEffect, 40);
-                }
-            }
-            typeEffect();
         }
-
         function closePopup() {
             document.getElementById("popup").style.display = "none";
         }
-
         function moveNo() {
             let noBtn = document.getElementById("no-btn");
-
-            // Function to move the "No" button continuously
-            function continuousMove() {
-                let maxX = window.innerWidth - noBtn.clientWidth - 10;
-                let maxY = window.innerHeight - noBtn.clientHeight - 10;
-                let newX = Math.random() * maxX;
-                let newY = Math.random() * maxY;
-
-                noBtn.style.left = `${newX}px`;
-                noBtn.style.top = `${newY}px`;
-            }
-
-            // Initially move the button and then keep moving it every 100ms
-            continuousMove();
-            setInterval(continuousMove, 100);
+            noBtn.style.left = Math.random() * (window.innerWidth - noBtn.clientWidth) + "px";
+            noBtn.style.top = Math.random() * (window.innerHeight - noBtn.clientHeight) + "px";
         }
     </script>
-
 </body>
 </html>
+
