--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
             font-family: 'Arial', sans-serif;
             overflow: hidden;
+            margin: 0;
+            padding: 0;
         }
         #question {
             font-size: 36px;
@@ -17,6 +19,7 @@
             color: #fff;
             text-shadow: 2px 2px 4px #000000;
             margin-top: 30px;
+            word-wrap: break-word;
         }
         .btn {
             font-size: 20px;
@@ -25,18 +28,17 @@
             cursor: pointer;
             border-radius: 25px;
             transition: all 0.3s ease;
+            position: absolute;
         }
         #yes-btn {
             background-color: #88e1f2;
             left: 45%;
             top: 350px;
-            position: absolute;
         }
         #no-btn {
             background-color: #ff6f61;
             left: 55%;
             top: 350px;
-            position: absolute;
         }
         #popup {
             display: none;
@@ -86,12 +88,34 @@
         .gallery img:hover {
             transform: scale(1.05);
         }
+
+        /* Responsive styles */
+        @media (max-width: 768px) {
+            #question {
+                font-size: 28px;
+            }
+            .btn {
+                font-size: 18px;
+                padding: 10px 20px;
+            }
+            #yes-btn, #no-btn {
+                top: 250px;
+            }
+            .gallery img {
+                width: 150px;
+                height: 150px;
+            }
+            #popup {
+                width: 90%;
+                padding: 15px;
+            }
+        }
     </style>
 </head>
 <body>
     <div id="question">Will you be my Valentine? ❤️</div>
     <button class="btn" id="yes-btn" onclick="showPopup()">Yes</button>
-    <button class="btn" id="no-btn" onmouseover="moveNo()">No</button>
+    <button class="btn" id="no-btn" onmouseover="moveNo()" onclick="moveNo()">No</button>
     <div class="gallery">
         <img src="valentine1.jpg" alt="Memory 1">
         <img src="valentine2.jpg" alt="Memory 2">
@@ -119,4 +143,3 @@
     </script>
 </body>
 </html>
-
